# personal_assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  index.py  pyproject.toml
.github/workflows/: backend.yaml  web.yaml
docs/: api_curl_requests.md  api_requests.md  background_tasks_api.md  chunked_processing.md  email.md  features.md  file.md  future_improvements.md  gemini_integration.md  multi_tenant_api.md  organization.md  uploads.md
src/: main.py
src/auth/: tokens.py
src/config/: config.py
src/controllers/: __init__.py  auth_controller.py  background_tasks_controller.py  email_tasks_controller.py  file_controller.py  organization_controller.py  telegram_data_controller.py
src/core/: __init__.py  analyzer.py  background_task_manager.py  email_task_manager.py  intelligent_response.py  realtime_intelligence.py
src/core/rag/: qdrant.py
src/core/tasks/: analyzer.py  background_task_manager.py  email_task_manager.py  realtime_intelligence.py
src/db/: mongodb.py
src/llm/: __init__.py  llm_manager.py  openai_sdk.py
src/logs/: logs.py
src/models/: email_models.py  response_model.py  telegram_models.py
src/routers/: __init__.py  auth_router.py  background_tasks.py  email_tasks.py  files.py  organization_router.py  telegram_data.py  telegram_realtime.py
src/uploads/videos/: d29ea384-d96b-46be-aef4-6d3c31b299dd_9d07874d-bd18-4a0e-9e39-5a0f2941c7ce.webm
src/voice/: transcription.py
tests/test_database/: test_database.py
tests/test_voice/: test_trasnscription.py
web/: .env.example  .prettierignore  bun.lockb  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/dashboard/: layout.tsx  page.tsx
web/src/app/dashboard/integrations/: page.tsx
web/src/app/dashboard/rag/: page.tsx
web/src/app/dashboard/uploads/: page.tsx
web/src/app/organization/: page.tsx
web/src/app/telegram_login/: page.tsx
web/src/components/: EmailComponent.tsx  FileUpload.tsx  LoadingDashboard.tsx  TelegramAuth.tsx  TelegramComponent.tsx
web/src/config/: config.ts
web/src/utils/: dateTime.ts
